--- a/css/main.css
+++ b/css/main.css
@@ -110,7 +110,7 @@ p {
     flex-direction: column;
     text-align: center;
     width: 40%;
-    margin-left: 40%;
+    margin-left: 50%;
 }
 
 #home {
@@ -123,7 +123,7 @@ p {
 
 /* M E D I A - Q U E R I E S */
 
-@media (max-width: 1100px ) {
+@media (max-width: 1000px ) {
     p {
         font-size: 1em;
     }
@@ -133,6 +133,7 @@ p {
     .item-1 {
         font-size: 1em;
     }
+
     #mission {
         color: black;
         display: flex;
@@ -141,6 +142,12 @@ p {
         text-align: center;
         margin: 0 auto;
         
+    }
+
+    .sticky {
+        min-height: calc(100vh - 50px);
+        width: 100%;
+        margin: 0 auto;
     }
 
 }
